force-app/main/default/objects/Schemes_Offers__c/Schemes_Offers__c.object-meta.xml
<CustomObject>
    <label>Schemes &amp; Offers</label>
    <nameField>
        <label>Schemes &amp; Offers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schemes &amp; Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>