force-app/main/default/objects/Schemes_Offers__c/fields/BHK_Type__c.field-meta.xml
<CustomField>
    <fullName>BHK_Type__c</fullName>
    <formula>Booking__r.BHK_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BHK Type</label>
    <type>Text</type>
</CustomField>