force-app/main/default/objects/Schemes_Offers__c/fields/Finance_User__c.field-meta.xml
<CustomField>
    <fullName>Finance_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Schemes_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>