force-app/main/default/objects/Schemes_Offers__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Schemes &amp; Offers</relationshipLabel>
    <relationshipName>Schemes_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>